# ufsatm

./: .gitmodules  CMakeLists.txt  README.md  atmos_model.F90  atmos_util.F90  fv3_cap.F90  module_fcst_grid_comp.F90  ufsatm_cap.F90  ufsatm_util.F90
.github/workflows/: GCC.yml  docs.yml
ccpp/: CCPP_driver.F90  CMakeLists.txt
ci/: CMakeLists.txt
cpl/: module_block_data.F90  module_cap_cpl.F90  module_cdeps_inline.F90  module_cplfields.F90  module_cplscalars.F90  module_inline.F90
fv3/: atmos_model.F90  fv3_cap.F90  module_fcst_grid_comp.F90  module_fv3_config.F90
io/: fv3atm_clm_lake_io.F90  fv3atm_common_io.F90  fv3atm_history_io.F90  fv3atm_oro_io.F90  fv3atm_restart_io.F90  fv3atm_rrfs_sd_io.F90  fv3atm_sfc_io.F90  module_gather_test.F90  module_write_internal_state.F90  module_write_netcdf.F90  module_write_restart_netcdf.F90  module_wrt_grid_comp.F90  post_fv3.F90  post_nems_routines.F90
moving_nest/: bounding_box.F90  fv_moving_nest.F90  fv_moving_nest_main.F90  fv_moving_nest_physics.F90  fv_moving_nest_types.F90  fv_moving_nest_utils.F90  fv_tracker.F90
mpas/: CMakeLists.txt  atmos_coupling.F90  atmos_model.F90  module_fcst_grid_comp.F90  module_mpas_config.F90  module_mpas_fcst_grid_comp.F90  mpas_atmos_model.F90  mpas_cap.F90  mpas_model.F90  mpas_nuopc_cap.F90  ufs_mpas.F90  ufs_mpas_io.F90  ufs_mpas_module.F90  ufs_mpas_subdriver.F90
tests/: CMakeLists.txt  test_copy2block.F90  test_fv3_cap.F90  test_merge_importfield.F90  test_module_copy2block.F90  test_module_wrt_grid_comp.F90  test_my_new_procedure.F90  test_post_nems_routines.F90
(+88 files in other folders)
